@@ -38,6 +38,8 @@
 <p>2015-04-12  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/pict.c (PictPixmapOp): Fix Coverity 55875 and 55883
+&quot;Resource leak&quot;. 2nd try.</li>
 <li>coders/pcx.c (WritePCXImage): Fix Coverity 55877 &quot;Resource
 leak&quot;. 2nd try.</li>
 <li>coders/meta.c (format8BIM): Fix Coverity 55842 &quot;Resource
